# INF4710-TP2

./: .gitignore  CMakeLists.txt  README.txt  makeGraphs.R
data/: rates.csv
include/tp2/: common.hpp  defines.hpp.conf
src/tp2/: conv_rgb2ycbcr.cpp  conv_ycbcr2rgb.cpp  dct.cpp  dct_inv.cpp  decoup.cpp  decoup_inv.cpp  match_block.cpp  part1_main.cpp  part2_main.cpp  quantif.cpp  quantif_inv.cpp  zigzag.cpp  zigzag_inv.cpp
